Setting terminal type

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,3 +40,5 @@ set-window-option -g message-style fg=#111111,bold,bg=#eeeeee
 set-option -g status-style fg=white,bg=#8317dd
 set-window-option -g window-status-separator |
 
+# Set Terminal type
+set -g default-terminal "xterm-256color"
