Add option to load local settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,3 +42,7 @@ set-window-option -g window-status-separator |
 
 # Set Terminal type
 set -g default-terminal "xterm-256color"
+
+# ------
+# Load local settings
+source ~/.dotfiles/this-machine/tmux.conf
