Change default tmux bar color to match zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ set-window-option -g window-active-style fg=white,bg=colour235
 set-window-option -g message-style fg=#111111,bold,bg=#eeeeee
 
 # Status Bar
-set-option -g status-style fg=white,bg=#8317dd
+set-option -g status-style fg=white,bg=#B7650E
 set-window-option -g window-status-separator |
 
 # Set Terminal type
